tests/ui/issues/issue-70724-add_type_neq_err_label-unwrap.stderr
error[E0369]: binary operation `==` cannot be applied to type `{fn item a: fn() -> i32}`
  --> $DIR/issue-70724-add_type_neq_err_label-unwrap.rs:6:5
   |
LL |     assert_eq!(a, 0);
   |     ^^^^^^^^^^^^^^^^
   |     |
   |     {fn item a: fn() -> i32}
   |     {integer}
   |
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/issue-70724-add_type_neq_err_label-unwrap.rs:6:5
   |
LL |     assert_eq!(a, 0);
   |     ^^^^^^^^^^^^^^^^ expected fn item, found integer
   |
   = note: expected fn item `{fn item a: fn() -> i32}`
                 found type `{integer}`
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `{fn item a: fn() -> i32}` doesn't implement `Debug`
  --> $DIR/issue-70724-add_type_neq_err_label-unwrap.rs:6:5
   |
LL | fn a() -> i32 {
   |    - consider calling this function
...
LL |     assert_eq!(a, 0);
   |     ^^^^^^^^^^^^^^^^ `{fn item a: fn() -> i32}` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for fn item `{fn item a: fn() -> i32}`
   = help: use parentheses to call this function: `a()`
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308, E0369.
For more information about an error, try `rustc --explain E0277`.
